--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,13 @@
-pohoda-raiffeisenbank (0.1.0) UNRELEASED; urgency=low
+pohoda-raiffeisenbank (0.2.0) UNRELEASED; urgency=medium
 
+  * Sharepoint & Mssql support added
+
+ --  <vitezslav.dvorak@spojenet.cz>  Fri, 14 Jun 2024 12:15:33 +0200
+
+pohoda-raiffeisenbank (0.1.0) unstable; urgency=low
+
+  [ Vítězslav Dvořák ]
   * Initial release. Closes: #nnnn
     <nnnn is the bug number of your ITP>
 
- -- Vítězslav Dvořák <info@vitexsoftware.cz>  Wed, 22 May 2024 13:45:35 +0200
+ --  <vitezslav.dvorak@spojenet.cz>  Fri, 14 Jun 2024 12:15:13 +0200
