--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
-pohoda-raiffeisenbank (0.3.1) UNRELEASED; urgency=medium
+pohoda-raiffeisenbank (0.4.0) UNRELEASED; urgency=medium
+
+  * now produce json report
+
+ -- vitex <info@vitexsoftware.cz>  Tue, 26 Nov 2024 11:07:58 +0100
+
+pohoda-raiffeisenbank (0.3.1) jammy; urgency=medium
 
   * SVG Icons update
 
- -- vitex <info@vitexsoftware.cz>  Mon, 21 Oct 2024 17:01:19 +0200
+ -- vitex <info@vitexsoftware.cz>  Tue, 26 Nov 2024 11:07:54 +0100
 
 pohoda-raiffeisenbank (0.3.0) jammy; urgency=medium
 
