--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
-pohoda-raiffeisenbank (1.1.0) UNRELEASED; urgency=medium
+pohoda-raiffeisenbank (1.1.1) UNRELEASED; urgency=medium
+
+  * code cleanup. PohodaSQL attachnent fix
+
+ -- vitex <info@vitexsoftware.cz>  Tue, 03 Dec 2024 00:45:54 +0100
+
+pohoda-raiffeisenbank (1.1.0) jammy; urgency=medium
 
   * raiffeisenbank-statements-sharepoint-checker added
 
- -- vitex <info@vitexsoftware.cz>  Thu, 28 Nov 2024 17:58:36 +0100
+ -- vitex <info@vitexsoftware.cz>  Tue, 03 Dec 2024 00:45:03 +0100
 
 pohoda-raiffeisenbank (1.0.0) jammy; urgency=medium
 
