--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
-pohoda-raiffeisenbank (1.1.1) UNRELEASED; urgency=medium
+pohoda-raiffeisenbank (1.1.2) UNRELEASED; urgency=medium
 
+  * Fail with correct exitpode
+
+ --  <vitezslav.dvorak@spojenet.cz>  Mon, 09 Dec 2024 11:37:42 +0100
+
+pohoda-raiffeisenbank (1.1.1) jammy; urgency=medium
+
+  [ vitex ]
   * code cleanup. PohodaSQL attachnent fix
 
- -- vitex <info@vitexsoftware.cz>  Tue, 03 Dec 2024 00:45:54 +0100
+ --  <vitezslav.dvorak@spojenet.cz>  Mon, 09 Dec 2024 11:37:22 +0100
 
 pohoda-raiffeisenbank (1.1.0) jammy; urgency=medium
 
