--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
-pohoda-raiffeisenbank (1.1.1) UNRELEASED; urgency=medium
+pohoda-raiffeisenbank (1.1.2) UNRELEASED; urgency=medium
+
+  * bankIDS processed now
+
+ -- vitex <info@vitexsoftware.cz>  Thu, 12 Dec 2024 00:02:32 +0100
+
+pohoda-raiffeisenbank (1.1.1) jammy; urgency=medium
 
   * code cleanup. PohodaSQL attachnent fix
 
- -- vitex <info@vitexsoftware.cz>  Tue, 03 Dec 2024 00:45:54 +0100
+ -- vitex <info@vitexsoftware.cz>  Thu, 12 Dec 2024 00:02:11 +0100
 
 pohoda-raiffeisenbank (1.1.0) jammy; urgency=medium
 
