--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
-pohoda-raiffeisenbank (1.2.0) UNRELEASED; urgency=medium
+pohoda-raiffeisenbank (1.2.1) UNRELEASED; urgency=medium
 
+  * foregin currency use fix
+
+ -- vitex <info@vitexsoftware.cz>  Wed, 18 Dec 2024 13:02:20 +0100
+
+pohoda-raiffeisenbank (1.2.0) jammy; urgency=medium
+
+  [ vitezslav.dvorak@spojenet.cz ]
   * ACCOUNT_CURRENCY support added
 
- --  <vitezslav.dvorak@spojenet.cz>  Thu, 12 Dec 2024 19:46:43 +0100
+ -- vitex <info@vitexsoftware.cz>  Wed, 18 Dec 2024 13:01:26 +0100
 
 pohoda-raiffeisenbank (1.1.3) jammy; urgency=medium
 
