--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
+pohoda-raiffeisenbank (1.2.2) UNRELEASED; urgency=medium
+
+  * better logging and exit codes
+
+ -- vitex <info@vitexsoftware.cz>  Tue, 28 Jan 2025 10:48:38 +0100
+
 pohoda-raiffeisenbank (1.2.1) jammy; urgency=medium
 
   * foregin currency use fix
 
- -- vitex <info@vitexsoftware.cz>  Fri, 20 Dec 2024 11:13:04 +0100
+ -- vitex <info@vitexsoftware.cz>  Tue, 28 Jan 2025 10:45:38 +0100
 
 pohoda-raiffeisenbank (1.2.0) jammy; urgency=medium
 
