--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
-pohoda-raiffeisenbank (1.2.2) UNRELEASED; urgency=medium
+pohoda-raiffeisenbank (1.3.0) UNRELEASED; urgency=medium
+
+  * Currency rates support added
+
+ -- vitex <info@vitexsoftware.cz>  Wed, 29 Jan 2025 12:38:29 +0100
+
+pohoda-raiffeisenbank (1.2.2) jammy; urgency=medium
 
   * better logging and exit codes
 
- -- vitex <info@vitexsoftware.cz>  Tue, 28 Jan 2025 10:48:38 +0100
+ -- vitex <info@vitexsoftware.cz>  Wed, 29 Jan 2025 12:37:40 +0100
 
 pohoda-raiffeisenbank (1.2.1) jammy; urgency=medium
 
