--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
-pohoda-raiffeisenbank (1.3.1) UNRELEASED; urgency=medium
+pohoda-raiffeisenbank (1.3.2) UNRELEASED; urgency=medium
 
+  * resulting json update
+
+ -- Vitex <vitezslav.dvorak@spojenet.cz>  Tue, 04 Feb 2025 13:13:03 +0100
+
+pohoda-raiffeisenbank (1.3.1) jammy; urgency=medium
+
+  [ vitex ]
   * foregin currency configuration update
 
- -- vitex <info@vitexsoftware.cz>  Mon, 03 Feb 2025 09:04:07 +0100
+ -- Vitex <vitezslav.dvorak@spojenet.cz>  Tue, 04 Feb 2025 13:12:44 +0100
 
 pohoda-raiffeisenbank (1.3.0) jammy; urgency=medium
 
