--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
-pohoda-raiffeisenbank (1.3.2) UNRELEASED; urgency=medium
+pohoda-raiffeisenbank (1.3.3) UNRELEASED; urgency=medium
 
+  * More Statement line
+
+ -- Vitex <vitezslav.dvorak@spojenet.cz>  Thu, 27 Feb 2025 18:13:25 +0100
+
+pohoda-raiffeisenbank (1.3.2) jammy; urgency=medium
+
+  [ vitex ]
   * mass attachments name problem fix
 
- -- vitex <info@vitexsoftware.cz>  Thu, 27 Feb 2025 01:20:37 +0100
+ -- Vitex <vitezslav.dvorak@spojenet.cz>  Thu, 27 Feb 2025 18:12:56 +0100
 
 pohoda-raiffeisenbank (1.3.2) jammy; urgency=medium
 
