--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
-pohoda-raiffeisenbank (1.3.4) UNRELEASED; urgency=medium
+pohoda-raiffeisenbank (1.3.5) UNRELEASED; urgency=medium
+
+  * upload tool now can upload
+
+ -- vitex <info@vitexsoftware.cz>  Wed, 12 Mar 2025 20:54:39 +0100
+
+pohoda-raiffeisenbank (1.3.4) jammy; urgency=medium
 
   * Statement line now accepted by upload tool
 
- -- vitex <info@vitexsoftware.cz>  Wed, 12 Mar 2025 16:03:01 +0100
+ -- vitex <info@vitexsoftware.cz>  Wed, 12 Mar 2025 20:54:23 +0100
 
 pohoda-raiffeisenbank (1.3.3) jammy; urgency=medium
 
