--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
-pohoda-raiffeisenbank (1.3.7) UNRELEASED; urgency=medium
+pohoda-raiffeisenbank (1.3.8) UNRELEASED; urgency=medium
 
+  * checker configuration update
+
+ -- Vitex <vitezslav.dvorak@spojenet.cz>  Fri, 25 Jul 2025 11:51:42 +0200
+
+pohoda-raiffeisenbank (1.3.7) jammy; urgency=medium
+
+  [ vitex ]
   * Duplicity check added
 
- -- vitex <info@vitexsoftware.cz>  Mon, 23 Jun 2025 11:08:37 +0200
+ -- Vitex <vitezslav.dvorak@spojenet.cz>  Fri, 25 Jul 2025 11:51:10 +0200
 
 pohoda-raiffeisenbank (1.3.6) jammy; urgency=medium
 
