--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
-pohoda-raiffeisenbank (1.3.8) UNRELEASED; urgency=medium
+pohoda-raiffeisenbank (1.4.0) UNRELEASED; urgency=medium
 
+  * TransactionIdentifier now contains the timestamp
+
+ -- vitex <info@vitexsoftware.cz>  Tue, 02 Sep 2025 21:38:01 +0200
+
+pohoda-raiffeisenbank (1.3.8) jammy; urgency=medium
+
+  [ Vitex ]
   * checker configuration update
 
- -- Vitex <vitezslav.dvorak@spojenet.cz>  Fri, 25 Jul 2025 11:51:42 +0200
+ -- vitex <info@vitexsoftware.cz>  Tue, 02 Sep 2025 21:37:34 +0200
 
 pohoda-raiffeisenbank (1.3.7) jammy; urgency=medium
 
